<resources>
    <string name="app_name">WhatsApp</string>
    <string name="txtLog">Loguin</string>
    <string name="txt_nao_temConta">Não tem conta? Cadastre-se</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="txt_nome_User">Nome</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="sair_doApp_txt">Sair da conta</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userNameConfig">Nome do usuário</string>
    <string name="nome_user_config">Esse nome ficara visivel para seus contatos do WhatsApp</string>
    <string name="title_activity_chat">ChatActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nomeChatUser">nome usuario</string>
    <string name="text_remetente">Remetente</string>
    <string name="text_destinatario">Destinatario</string>
</resources>